Blender crashes on separating curves with different Evaluation Time / keyframes #35504

Closed
opened 2013-05-25 19:29:44 +02:00 by André Savik · 4 comments

%%%--- Operating System, Graphics card ---
Linux Mint 64 bit

- Blender version with error, and version that worked ---

2.67a

(All system info, crash.txt and detailed description contained in the blend file)

- Short description of error ---

Add keyfranes to eval time on one curve (the active one), then join it with another. In edit mode, try to separate them. Blender crashes.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Attached blend file.

%%%

%%%--- Operating System, Graphics card --- Linux Mint 64 bit - Blender version with error, and version that worked --- 2.67a (All system info, crash.txt and detailed description contained in the blend file) - Short description of error --- Add keyfranes to eval time on one curve (the active one), then join it with another. In edit mode, try to separate them. Blender crashes. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Attached blend file. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%in editcurve.c: separate_exec()
removing BKE_curve_editNurb_keyIndex_free() stops crash (and gets called from free_editNurb after), but there is probably a better fix possible that splits up animdata on separate.

Assigning to Sergey.
%%%

%%%in editcurve.c: separate_exec() removing BKE_curve_editNurb_keyIndex_free() stops crash (and gets called from free_editNurb after), but there is probably a better fix possible that splits up animdata on separate. Assigning to Sergey. %%%

%%%Fixed in svn rev57046. Thanks for the report, closing.%%%

%%%Fixed in svn rev57046. Thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35504
No description provided.