Fix #35504: Blender crashes on separating curves with different Evaluation Time / keyframes

Used slightly different approach from what was discussed with Campbell,
and the reason of this is slightly better support of curve point animation
re-mapping.

There're actually some limitations which better be discussed bewfore 'b':
- If there're no point animation, spline separation goes just fine.
- If there're animated points in the curve, blender will preserve
  animation for currently editing curve. But, since new curve created
  by Separate operator shares the same AnimData, it'll be animatied
  in a weird way.

So not sure whether it's better to preserve animation for current spline
but require switching animationdata for new spline or resetting animation
for current curve's animation data.